--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "deploy": "node deploy.js",
+    "postinstall": "npm run deploy",
     "db:migrate": "sequelize-cli db:migrate",
     "db:seed:all": "sequelize-cli db:seed:all"
   },
