--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "debug": "node debug.js",
     "migrate": "node migrate.js",
     "deploy": "node deploy.js",
     "db:migrate": "sequelize-cli db:migrate",
