--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: FRONTEND_URL
+        value: https://kanoonwise-li7v.onrender.com
       - key: DB_URL
         value: postgresql://neondb_owner:npg_u38miyDrPJXS@ep-tiny-frost-a1lat6gn-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
       - key: DATABASE_URL
