--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "aws-sdk": "^2.1589.0",
     "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^8.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csrf": "^3.1.0",
