Fix: Add robust partial migration fix and update deployment scripts
- Add fix-partial-migration.js to handle partial migration states
- Update package.json start script to run migration fix before server
- Update deploy-production.js to use new robust migration fix
- This should resolve the 'approved column does not exist' error in production

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for a lawyer-facing platform.",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node fix-partial-migration.js && node src/server.js",
     "dev": "nodemon src/server.js",
     "debug": "node debug.js",
     "migrate": "node deploy-production.js",
