--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "backend/src/server.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run debug --prefix backend && npm run migrate --prefix backend",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run debug --prefix backend && npm run migrate --prefix backend && npm run setup-packages --prefix backend",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
