feat: Implement CMS content loading in Kanoonwise Academy and Legal Insights pages
- Added content loading functionality using CMS for Kanoonwise Academy and Legal Insights pages.
- Removed hardcoded articles and events data, replacing them with dynamic content from CMS.
- Introduced loading states while fetching content.
- Created a new CMS management page for admin users to manage website content.
- Updated AdminNavbar to include a link to the new CMS management page.
- Enhanced package.json scripts for better build management.

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ IMAGE_REQUIREMENTS.md
 # Lock files (uncomment if you want to ignore them)
 # package-lock.json
 # yarn.lock
+
+# Local Netlify folder
+.netlify
