--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "backend/src/server.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run migrate --prefix backend && npm run setup-packages --prefix backend",
-    "start": "npm run start --prefix backend"
+  "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run migrate --prefix backend && npm run setup-packages --prefix backend",
+  "build:frontend": "npm install --prefix frontend && npm run build --prefix frontend",
+  "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
