--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.535.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
@@ -32,6 +33,8 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0",
     "vite": "^7.0.4",
