--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,15 @@
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^2.5.8",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.535.0",
     "postcss": "^8.5.6",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
