--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
+    "lottie-react": "^2.4.1",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
