--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
@@ -26,13 +27,13 @@
     "date-fns": "^4.1.0",
     "dompurify": "^2.5.8",
     "gray-matter": "^4.0.3",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.535.0",
     "postcss": "^8.5.6",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
-    "lottie-react": "^2.4.1",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
