feat: update FontAwesome to version 6.7.2 and adjust related imports
fix: enhance AdminNavbar logout functionality with error handling and session clearing

fix: improve BusinessServicePayment component to handle package fetching logic and loading states

feat: refactor PublicBusinessServicePayment to accept packageData prop for better flexibility

fix: update various service pages to utilize packageData for PublicBusinessServicePayment

fix: modify contentLoader to correctly import markdown files with Vite

fix: adjust paymentSlice to manage package fetching state and caching logic

chore: update package.json scripts for better build process and add verification step

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node fix-partial-migration.js && node src/server.js",
     "dev": "nodemon src/server.js",
-    "migrate": "node deploy-production.js",
-    "setup-packages": "node setup-production-packages.js",
-    "deploy": "node deploy.js",
+    "migrate": "node migrate.js",
+    "setup-packages": "node deploy-fresh-production-packages.js",
+    "verify-packages": "node verify-production-deployment.js",
+    "verify-dev": "node verify-all-packages.js",
     "db:migrate": "sequelize-cli db:migrate",
     "db:seed:all": "sequelize-cli db:seed:all",
     "test:s3": "node test-s3-connection.js",
