--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "backend/src/server.js",
   "scripts": {
-  "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run migrate --prefix backend && npm run setup-packages --prefix backend",
-  "build:frontend": "npm install --prefix frontend && npm run build --prefix frontend",
-  "start": "npm run start --prefix backend"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run migrate --prefix backend",
+    "build:production": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run migrate --prefix backend && npm run setup-packages --prefix backend",
+    "build:frontend": "npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend",
+    "verify": "npm run verify-dev --prefix backend"
   },
   "keywords": [],
   "author": "",
