--- a/backend/package.json
+++ b/backend/package.json
@@ -39,8 +39,10 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.13",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
