--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for a lawyer-facing platform.",
   "main": "src/server.js",
   "scripts": {
-    "start": "node fix-partial-migration.js && node src/server.js",
+    "start": "node migrate.js && node src/server.js",
     "dev": "nodemon src/server.js",
     "migrate": "node migrate.js",
     "setup-packages": "node deploy-fresh-production-packages.js",
