--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.13",
+    "@getbrevo/brevo": "^1.0.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
